# advent-of-code-2023

./: .gitignore  README.md
aoc23c/: .gitignore  CMakeLists.txt  arraytools.c  arraytools.h  day01.c  day01.h  day02.c  day04.c  day04.h  day08.c  day09.c  day10.c  day13.c  days.h  error_tools.c  error_tools.h  errortools.c  errortools.h  file_tools.c  file_tools.h  filetools.c  filetools.h  hello.c  hello.h  list.c  list.h  main.c  matrix.c  matrix.h  old_arraytools.c  old_arraytools.h  old_errortools.c  old_errortools.h  old_filetools.c  old_filetools.h  old_list.c  old_list.h  old_mathtools.c  old_mathtools.h  old_matrix.c  (+13 more)
aoc23cpp/: CMakeLists.txt  day01.cpp  day01.hpp  day02.cpp  day09.cpp  days.hpp  hello.cpp  hello.hpp  main.cpp  puzzle.cpp  puzzle.hpp
aoc23cs/: Day01.cs  Program.cs  aoc23cs.sln
aoc23cs/.run/: Day 1.run.xml
aoc23go/: day01.go  go.mod  hello.go  main.go  puzzle.go
aoc23java/src/aoc23java/: Day01.java  Day02.java  Day05.java  Hello.java  IntTuple.java  LongRange.java  Main.java  Puzzle.java
aoc23java/src/aoc23java/day01/: Day01.java
aoc23java/src/aoc23java/day02/: Day02.java
aoc23java/src/aoc23java/day05/: CategoryMap.java  CategoryMapSortedSet.java  Day05.java  Seeds.java
aoc23java/src/aoc23java/day07/: Card.java  Day07.java  Hand.java  PlayedHand.java  Ranking.java
aoc23java/src/aoc23java/day08/: Day08.java
aoc23java/src/aoc23java/day12/: Day12.java  ProblemLine.java
aoc23java/src/aoc23java/day13/: Day13.java
aoc23js/: day08.js  day09.js  day11.js  index.js  package.json  puzzle.js
aoc23py/: day01.py  day02.py  day03.py  day04.py  day06.py  day08.py  day09.py  day10.py  day12.py  day13.py  day14.py  days.py  hello.py  main.py  puzzle.py  solvers.py
aoc23rs/: .gitignore  Cargo.toml
aoc23rs/src/: hello.rs  main.rs
aoc23rs/src/day01/: mod.rs
aoc23swift/aoc23swift/: day04.swift  day11.swift  hello.swift  main.swift  puzzle.swift
aoc23swift/aoc23swift.xcodeproj/: project.pbxproj
aoc23ts/: .gitignore  hello.ts  index.ts  package.json
aoc23ts/.run/: Hello World.run.xml
logbook/: README.md  day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  introduction.md
(+6 files in other folders)
